# soundcloud-tui

./: Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: packaging.md
src/: lib.rs  main.rs
src/app/: action.rs  auth.rs  command.rs  event.rs  mod.rs  playback.rs  reducer.rs  route.rs  settings_menu.rs  state.rs
src/app/state/: content.rs  events.rs  init.rs  interaction.rs  loading.rs  mod.rs  playback.rs
src/config/: credentials.rs  history.rs  mod.rs  paths.rs  secure_store.rs  settings.rs  tokens.rs
src/input/: events.rs  keys.rs  mod.rs
src/integrations/: mod.rs  mpris.rs
src/integrations/media_controls/: mod.rs  native.rs  projection.rs
src/player/: backend.rs  command.rs  event.rs  ipc.rs  mod.rs  mpv.rs  mpv_locator.rs  runtime.rs
src/runtime/: mod.rs
src/soundcloud/: auth.rs  client.rs  mod.rs  models.rs  paging.rs  service.rs
src/ui/: add_to_playlist_modal.rs  auth.rs  content.rs  cover_art.rs  error_modal.rs  geometry.rs  header.rs  help.rs  layout.rs  logout_confirm_modal.rs  mod.rs  playbar.rs  queue.rs  settings.rs  sidebar.rs  theme.rs  visualizer.rs  welcome.rs  widgets.rs
src/util/: mod.rs  text.rs  time.rs
src/visualizer/: analyzer.rs  cpal_capture.rs  mod.rs  pipewire_capture.rs  runtime.rs
tests/: app_events.rs  reducer.rs
