[package]
name = "soundcloud-tui"
version = "0.1.0"
edition = "2024"

[features]
default = ["mpris"]
mpris = ["dep:mpris-server"]

[dependencies]
anyhow = "1.0"
arboard = "3.4"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cpal = "0.16"
crossterm = { version = "0.29", features = ["bracketed-paste"] }
dirs = "6.0"
fern = "0.7"
log = "0.4"
open = "5.3"
rand = "0.8"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
realfft = "3.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
image = "0.25"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
url = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = { version = "0.9", optional = true }
pipewire = "0.9"
zbus = { version = "5.5", features = ["tokio"] }

[target.'cfg(windows)'.dependencies]
interprocess = "2.4"
souvlaki = "0.8.3"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
souvlaki = "0.8.3"
